--- a/q3.ipynb
+++ b/q3.ipynb
@@ -77,14 +77,19 @@
     "\n",
     "testData = pickle.load(file1)\n",
     "trainData = pickle.load(file2)\n",
+    "# loading the data from files",
     "\n",
     "X_T = testData[:,0]\n",
     "Y_T = testData[:,1]\n",
+    "# extracting the respective column values",
     "\n",
     "X_T = X_T[:,np.newaxis]\n",
     "Y_T = Y_T[:,np.newaxis]\n",
+    "# adding a new dimension",
+    "# X_T and Y_T contains the test data",
     "\n",
     "trainDatas = np.split(np.random.permutation(trainData),20)\n",
+    "# here we have split the training data into 20 random pieces",
     "\n",
     "X_train = []\n",
     "Y_train = []\n",
